--- a/.env.staging
+++ b/.env.staging
@@ -1,10 +1,12 @@
-VUE_APP_TITLE=COVID—19 Staging
+VUE_APP_TITLE=COVID-19 Staging
+VUE_APP_BASE_URL=http://localhost:8080/
 
-VUE_APP_BASE_URL=https://covid-19.feta.ninja/
-VUE_APP_BASE_API=https://covid.cvcio.org/
-VUE_APP_URL=https://covid-19.feta.ninja/
-VUE_APP_DOMAINNAME=covid-19.feta.ninja
+VUE_APP_BASE_API=https://covid.imedd.org
+VUE_APP_GOV_API=https://data.gov.gr/api/v1/query/mdg_emvolio_weekly
+
+VUE_APP_GOV_API_KEY=[GOV DATA TOKEN goes here]
+VUE_APP_MAPBOX=[MAPBOX ACCESS TOKEN goes here]
 
 VUE_APP_I18N_LOCALE=el
 VUE_APP_I18N_FALLBACK_LOCALE=dev
-VUE_APP_VERSION=2.2.1
+VUE_APP_VERSION=3.0.1
