--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "covid-19",
-  "version": "2.4.0",
+  "version": "3.0.1",
   "description": "COVID-19 Greece Visualization",
   "author": "andefined <dimitris.papaevagelou@andefined.com>",
   "domainname": "lab.imedd.org",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
-    "build": "NODE_ENV=production vue-cli-service build --mode production",
-    "production": "vue-cli-service build --mode production",
+    "build": "cross-env NODE_ENV=production vue-cli-service build --mode production",
     "staging": "vue-cli-service build --mode staging",
     "lint": "vue-cli-service lint"
   },
